--- a/drupal8-university/src/app/components/home/home.component.html
+++ b/drupal8-university/src/app/components/home/home.component.html
@@ -12,6 +12,7 @@
           <th scope="col"> First Name </th>
           <th scope="col"> created at </th>
           <th scope="col"> courses </th>
+          <th scope="col"> options </th>
         </tr>
         <tr *ngFor="let student of students.data">
           <td> {{ student.attributes.name }}</td>
@@ -22,6 +23,7 @@
               <li *ngFor="let course of student.relationships.field_courses.data">{{getCoure(course.id)}}</li>
             </ul>
           </td>
+          <td> <i class="material-icons" (click)="delete(student.attributes.uuid)"> delete_forever </i> </td>
         </tr>
       </table>
     </div>
